fixing homepage buttons for readability

--- a/staticfiles/admin/css/DatabaseStyle.css
+++ b/staticfiles/admin/css/DatabaseStyle.css
@@ -32,3 +32,6 @@
 .bi-small {
   font-size: 500% !important;
 }
+.mb-2 {
+  color: #000 !important;
+}
